--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,9 +4,11 @@
 
 @import './base.css';
 @import './RS_styles-remake.css';
+@import './inputs.css';
 @import './buttons.css';
 @import './cenik.css';          /* Ceník styling */
 @import './tabs.css';
+@import './chunk-vendors.css';  /* Bootstrap 4.1.2 */
 
 :root{
   scroll-behavior: smooth;
@@ -24,6 +26,7 @@
 /* ! TEMP */
 /* body {font-family: 'Inter', 'Roboto', sans-serif !important;}
 h1, h2, h3, h4, h5, h6 {font-family: 'Poppins', 'Arial', sans-serif !important;} */
+#vue-inspector-container, #__vue-devtools-container__{display: none !important;}
 
 html {
   scroll-padding-top: 90px;
@@ -45,6 +48,11 @@ body {
   -moz-osx-font-smoothing: grayscale;
   overflow-x: clip;
 
+}
+
+*:focus-visible {
+  outline: 3px solid var(--color-focus-outline, -webkit-focus-ring-color) !important;
+  outline-offset: 0px !important;
 }
 
 button{
@@ -102,12 +110,14 @@ img{
 	white-space: nowrap;
 }
 
+
 .bullet-points {
   list-style-type: disc;
 }
 
 .bullet-points li {
   padding-left: 0.5rem;
+  line-height: 1.25;
 }
 
 .bullet-points li+li{
@@ -117,4 +127,22 @@ img{
 p:last-child{
   margin-bottom: 0;
   /* color: red !important */
+}
+
+.hr-line {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 1rem;
+}
+
+.hr-line:before,
+.hr-line:after {
+  content: "";
+  flex: 1 1;
+  /* border-bottom: 1px solid currentColor; */
+  height: 1px;
+  background-color: rgba(0, 0, 0, 0.15);
+  /* opacity: 0.25; */
+  /* margin: auto; */
 }
