--- a/src/assets/tabs.css
+++ b/src/assets/tabs.css
@@ -1,3 +1,76 @@
+/* BUTTON RESET */
+.tabs button {
+  appearance: none;
+  background-color: transparent;
+  border: none;
+  color: inherit;
+  font-family: inherit;
+  font-size: 100%;
+  outline: none;
+}
+
+/* # line */
+.tabs.line{
+  display: flex;
+  margin: 0 auto;
+  margin: -0rem auto 0.75rem;
+  border-bottom: 1px solid var(--color-gray-mid, #e4e4e4);
+  overflow: auto;
+  scrollbar-width: thin;
+
+
+
+  .tab{
+    position: relative;
+    /* font-size: 0.875rem; */
+    font-size: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    padding: 0.5rem 1.0rem;
+    user-select: none;
+    -webkit-tap-highlight-color: transparent;
+    /* border-radius: 10px 10px 0 0; */
+    line-height: 1.15;
+    min-height: 40px;
+    transition: background-color 0.15s;
+    flex: 0 0 auto;
+
+    &.active{
+      font-weight: 600;
+      letter-spacing: -0.015em; /* Compensates for increase width from font-weight */
+      color: var(--color-blue, #20234c);
+    }
+
+    &::after{
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      transform: translate(-50%, 0px);
+      width: 8ch;
+      width: 0%;
+      height: 2px;
+      background-color: var(--color-blue, #20234c);
+      /* Disable transition to disable transition */
+      transition: width 100ms ease-out;
+    }
+
+    &.active::after {
+      width: 100%;
+    }
+  }
+
+  &.wrap{
+    flex-wrap: wrap;
+  }
+
+  h3+&{
+    margin-top: -0.75rem;
+  }
+}
+
 
 /* # PILL */
 .tabs.pill {
@@ -16,7 +89,7 @@
     padding: 0.5em 0.75em;
     line-height: 1;
     font-size: 14px;
-    min-width: 8rem;
+    min-width: 7rem;
     text-align: center;
     justify-content: center;
     cursor: pointer;
@@ -44,56 +117,8 @@
     &.active {
       background-color: white;
       font-weight: 600;
-      /* Compensates for increased width from bold */
-      letter-spacing: -0.01em;
+      letter-spacing: -0.015em; /* Compensates for increase width from font-weight */
     }
-  }
-}
-
-
-
-/* # line */
-.tabs.line{
-  display: flex;
-  margin: 0 auto;
-  justify-content: center;
-  margin: 0rem auto 0.5rem;
-
-  .tab{
-    position: relative;
-    font-size: 14px;
-    min-height: 2.75rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    padding: 0.0rem 1.25rem 3px;
-    transition: background-color 0.05s;
-    user-select: none;
-    -webkit-tap-highlight-color: transparent;
-
-    &:not(.active):hover{
-      background-color: rgba(0, 0, 0, 0.033);
-    }
-
-    &.active{
-      letter-spacing: -0.01em;
-      font-weight: 600;
-
-      &::after{
-        content: '';
-        position: absolute;
-        bottom: 0;
-        left: 50%;
-        transform: translate(-50%, 0px);
-        width: 8ch;
-        height: 3px;
-        background-color: var(--color-blue, #20234c);
-        border-top-left-radius: 3px;
-        border-top-right-radius: 3px;
-      }
-    }
-
   }
 }
 
@@ -102,9 +127,8 @@
 /* # BULLET */
 .tabs.bullet{
   display: flex;
-  margin: 0 auto;
   justify-content: center;
-  margin: 0rem auto 0.5rem;
+  /* margin: 0rem auto 0.5rem; */
   border-radius: 999px;
   gap: 0.25rem;
   background-color: var(--color-gray-light, #f5f5f5);
@@ -124,8 +148,7 @@
     &.active{
       background-color: white;
       font-weight: 600;
-      /* Compensates for increased width from bold */
-      letter-spacing: -0.01em;
+      letter-spacing: -0.015em; /* Compensates for increase width from font-weight */
     }
 
     &:not(.active):hover {
@@ -134,3 +157,35 @@
   }
 }
 
+/* # BULLET */
+.tabs.bullet2{
+  display: flex;
+  justify-content: center;
+  /* margin: 0rem auto 0.5rem; */
+  border-radius: 6px;
+  gap: 0.25rem;
+  background-color: #f5f5f5;
+  width: fit-content;
+  padding: 0.25rem;
+
+  .tab{
+    font-size: 14px;
+    border-radius: 4px;
+    cursor: pointer;
+    line-height: 1;
+    padding: 0.5em 1.25em;
+    transition: background-color 0.1s;
+    user-select: none;
+    -webkit-tap-highlight-color: transparent;
+
+    &.active{
+      background-color: white;
+      font-weight: 600;
+      letter-spacing: -0.015em; /* Compensates for increase width from font-weight */
+    }
+
+    &:not(.active):hover {
+      /* background-color: rgba(255, 255, 255, 0.5) */
+    }
+  }
+}
